Refactor deployment notebook to streamline data processing and organization

--- a/deploy/udf_solution_installer.ipynb
+++ b/deploy/udf_solution_installer.ipynb
@@ -117,29 +117,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "193a0ff2-310a-441c-b4b8-fe8e2d35087e",
-   "metadata": {
-    "microsoft": {
-     "language": "python",
-     "language_group": "jupyter_python"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Move current notebook to the Install folder\n",
-    "move_item_to_folder(\n",
-    "        item_name=notebookutils.runtime.context[\"currentNotebookName\"],\n",
-    "        item_type=\"Notebook\",\n",
-    "        folder_name=\"Install\",\n",
-    "        workspace_id=workspace_id,\n",
-    "        client=client\n",
-    "    )\n",
-    "print(\"✅ Current notebook moved successfully!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "51d583e6",
    "metadata": {
     "microsoft": {
@@ -151,10 +128,58 @@
    "source": [
     "# Run a notebook to: Generate sample data\n",
     "result = launcher.run_notebook_synchronous(\n",
-    "    notebook_name=\"Generate Sample Data\",\n",
+    "    notebook_name=\"load_csv_data\",\n",
     "    parameters={},\n",
     "    timeout_seconds=3600\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b892590b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run a notebook to: Convert and standardize data form Bronze to Silver Lakehouse\n",
+    "result = launcher.run_notebook_synchronous(\n",
+    "    notebook_name=\"run_bronze_to_silver\",\n",
+    "    parameters={},\n",
+    "    timeout_seconds=3600\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7482026b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run a notebook to: Segment data from Silver to Gold Lakehouse\n",
+    "result = launcher.run_notebook_synchronous(\n",
+    "    notebook_name=\"run_silver_to_gold\",\n",
+    "    parameters={},\n",
+    "    timeout_seconds=3600\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75a7a9a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Move current notebook to the Install folder\n",
+    "move_item_to_folder(\n",
+    "        item_name=notebookutils.runtime.context[\"currentNotebookName\"],\n",
+    "        item_type=\"Notebook\",\n",
+    "        folder_name=\"notebooks\",\n",
+    "        workspace_id=workspace_id,\n",
+    "        client=client\n",
+    "    )\n",
+    "print(\"✅ Current notebook moved successfully!\")"
    ]
   },
   {
