Enhance UDF solution installer notebook with configurable settings and improved deployment logic

--- a/deploy/udf_solution_installer.ipynb
+++ b/deploy/udf_solution_installer.ipynb
@@ -55,6 +55,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "995d49ce",
+   "metadata": {},
+   "source": [
+    "## 2. Configure Settings\n",
+    "\n",
+    "Set the GitHub source and the target Lakehouse name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ce54dc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fabric_launcher import GitHubDownloader, LakehouseFileManager\n",
+    "\n",
+    "# ── GitHub source settings ────────────────────────────────────────────────────\n",
+    "GITHUB_OWNER     = \"alguadam\"\n",
+    "GITHUB_REPO      = \"fabric-workspace-cicd\"\n",
+    "GITHUB_BRANCH    = \"main\"\n",
+    "GITHUB_UDF_WORKSPACE_PATH = \"workspace-udf\" # Folder inside the repo where UDF solution is synched\n",
+    "GITHUB_DATA_PATH = \"data\"                   # Folder inside the repo to download\n",
+    "\n",
+    "# ── Fabric bronze Lakehouse target settings ─────────────────────────────────────────\n",
+    "LAKEHOUSE_NAME = \"maag_bronze\"      # Lakehouse in the current workspace\n",
+    "LAKEHOUSE_TARGET_CSV_FOLDER  = \"/\"  # Root folder under Lakehouse Files/\n",
+    "\n",
+    "# ── Temporary local directory ─────────────────────────────────────────────────\n",
+    "LOCAL_TEMP_DIR = \"/tmp/udf_data\"    # Where the repo folder is extracted"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f42758a9",
@@ -74,14 +108,15 @@
     "\n",
     "# Deploy solution with data folders\n",
     "launcher.download_and_deploy(\n",
-    "    repo_owner=\"alguadam\",\n",
-    "    repo_name=\"fabric-workspace-cicd\",\n",
-    "    branch = \"main\",\n",
-    "    workspace_folder=\"workspace-udf\",\n",
+    "    repo_owner=GITHUB_OWNER,\n",
+    "    repo_name=GITHUB_REPO,\n",
+    "    branch = GITHUB_BRANCH,\n",
+    "    workspace_folder=GITHUB_UDF_WORKSPACE_PATH,\n",
     "    allow_non_empty_workspace=True,\n",
-    "    item_type_stages = [[\"Lakehouse\",\"Environment\"],[\"Notebook\",\"Report\",\"DataAgent\",\"SemanticModel\"]],\n",
+    "    item_type_stages = [[\"Lakehouse\"],[\"Notebook\",\"Report\",\"DataAgent\",\"SemanticModel\"]],\n",
     "    validate_after_deployment=True,\n",
-    "    generate_report=False\n",
+    "    generate_report=False,\n",
+    "    extract_to=LOCAL_TEMP_DIR\n",
     ")"
    ]
   },
@@ -126,11 +161,14 @@
    },
    "outputs": [],
    "source": [
-    "# Run a notebook to: Generate sample data\n",
-    "result = launcher.run_notebook_synchronous(\n",
-    "    notebook_name=\"load_csv_data\",\n",
-    "    parameters={},\n",
-    "    timeout_seconds=3600\n",
+    "file_manager = LakehouseFileManager(notebookutils)\n",
+    "\n",
+    "file_manager.copy_folder_to_lakehouse(\n",
+    "    lakehouse_name=LAKEHOUSE_NAME,\n",
+    "    source_folder=LOCAL_TEMP_DIR,\n",
+    "    target_folder=LAKEHOUSE_TARGET_CSV_FOLDER,\n",
+    "    file_patterns=[\"*.csv\"],   # Only upload CSV files\n",
+    "    recursive=True,\n",
     ")"
    ]
   },
