Fix source folder path in Lakehouse file copy operation in UDF solution installer notebook

--- a/deploy/udf_solution_installer.ipynb
+++ b/deploy/udf_solution_installer.ipynb
@@ -155,7 +155,7 @@
     "\n",
     "file_manager.copy_folder_to_lakehouse(\n",
     "    lakehouse_name=LAKEHOUSE_NAME,\n",
-    "    source_folder=LOCAL_TEMP_DIR,\n",
+    "    source_folder=f\"{LOCAL_TEMP_DIR}/{GITHUB_DATA_PATH}\",\n",
     "    target_folder=LAKEHOUSE_TARGET_CSV_FOLDER,\n",
     "    file_patterns=[\"*.csv\"],   # Only upload CSV files\n",
     "    recursive=True,\n",
