Add parameterization for workspace-udf in parameter.yml for environment-specific value replacements

--- a/deploy/udf_solution_installer.ipynb
+++ b/deploy/udf_solution_installer.ipynb
@@ -74,8 +74,8 @@
     "from fabric_launcher import GitHubDownloader, LakehouseFileManager\n",
     "\n",
     "# ── GitHub source settings ────────────────────────────────────────────────────\n",
-    "GITHUB_OWNER     = \"alguadam\"\n",
-    "GITHUB_REPO      = \"fabric-workspace-cicd\"\n",
+    "GITHUB_OWNER     = \"slavatrofimov\"\n",
+    "GITHUB_REPO      = \"udf-fabric-workspace-cicd\"\n",
     "GITHUB_BRANCH    = \"main\"\n",
     "GITHUB_UDF_WORKSPACE_PATH = \"workspace-udf\" # Folder inside the repo where UDF solution is synched\n",
     "GITHUB_DATA_PATH = \"data\"                   # Folder inside the repo to download\n",
